jade templates incorporation

--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -14,7 +14,12 @@
  * or any other Grunt tasks you like.)
  */
 
+ @import "../bower_components/bootstrap/less/variables.less";
+ @import "../bower_components/bootstrap/less/mixins.less";
+ @import "../bower_components/bootstrap/less/normalize.less";
+ @import "components/global.less";
 
+ @import "../bower_components/bootstrap/less/type.less";
 
 // For example:
 //
