--- a/assets/styles/components/global.less
+++ b/assets/styles/components/global.less
@@ -45,10 +45,10 @@ body{
   & > *{
     position: relative;
     z-index: 1;
-    margin-bottom: 5em;
+    margin-bottom: 5em !important;
 
     &:last-child{
-      margin-bottom: 0;
+      margin-bottom: 0 !important;
     }
   }
 }
