--- a/assets/styles/components/landing.less
+++ b/assets/styles/components/landing.less
@@ -23,6 +23,14 @@
   }
 }
 
+.ico{
+  vertical-align: middle;
+  md-icon{
+    height: 50px;
+    width: 50px;
+  }
+}
+
 
 .custom-button-grid{
   display: table;
@@ -30,6 +38,7 @@
   min-height: 20vh;
   width: ~"calc(100% + 60px)";
   margin-left: -30px;
+  box-shadow: 0 5px 5px rgba(0,0,0,0.5);
 
   .breakpoint(mobile,{
     display: block;
@@ -89,11 +98,18 @@
   }
 
 
-  &:before{
+  /*&:before{
     content: "\2665";
     color: #000;
     display: inline-block;
+  }*/
+
+  .ico{
+    display: block;
+    text-align: center;
+    padding-bottom: 25px;
   }
+
 }
 
 .new-collaborator{
@@ -112,7 +128,12 @@
   margin: 0 30px;
 
   h2,p{
-    margin: 15px
+    margin: 0 15px;
+    padding: 15px 0;
+  }
+
+  p{
+    border-bottom: solid 1px rgb(229, 87, 87);
   }
 
   .map-wrap{
