--- a/assets/views/home.jade
+++ b/assets/views/home.jade
@@ -4,14 +4,35 @@ main.main
 
     
   section.map-section
-    h2 Someone needs your help, hug them with a supply!
+    h2
+      span.ico
+        <md-icon md-svg-src="images/radar.svg" cass="icon-title" aria-label="deliver" />
+      | Someone needs your help, hug them with a supply!
     p here are the nearest collectors for you
-    .map-wrap
-      <ng-map center="40.6743890, -73.9455" zoom="12" styles="[{stylers:[{hue:'#890000'},{visibility:'simplified'},{gamma:0.5},{weight:0.5}]},{elementType:'labels',stylers:[{visibility:'off'}]},{featureType:'water',stylers:[{color:'#890000'}]}]"></ng-map>
-  
+    .map-wrap(ng-controller="MapController").
+      <ng-map center="current-location" zoom="10" styles="[{stylers:[{hue:'#2C7597'},{visibility:'simplified'},{gamma:0.5},{weight:0.5}]},{elementType:'labels',stylers:[{visibility:'on'}]},{featureType:'water',stylers:[{color:'#61c6f4'}]}]">
+        <marker ng-repeat="beach in fakeGeopoints"
+            icon="{{image.url}}"
+            title="{{beach[0]}}"
+            position="{{beach[1]}}, {{beach[2]}}"
+            z-index="{{beach[3]}}"></marker>
+        </ng-map>
+      </ng-map>
   section.collaborate-section
-    h2 I'm part of logistics
+    h2
+      span.ico
+        <md-icon md-svg-src="images/greentech.svg" cass="icon-title" aria-label="deliver"/> 
+      | I'm part of logistics
     .custom-button-grid
-      a.new-collaborator.md-button(href="#/collaborate/new") Collector!
-      a.new-center.md-button(href="#/deliver/new") Deliver man
-      a.new-center.md-button(href="#/center/new") Collector Center!
+      a.new-collaborator.md-button(href="#/collaborate/new")
+        span.ico
+          <md-icon md-svg-src="images/handshake.svg" cass="icon-title" aria-label="deliver" />
+        | Collector!
+      a.new-center.md-button(href="#/deliver/new")
+        span.ico
+          <md-icon md-svg-src="images/delivery.svg" cass="icon-title" aria-label="deliver" />
+        | Deliver man
+      a.new-center.md-button(href="#/center/new")
+        span.ico
+          <md-icon md-svg-src="images/product.svg" cass="icon-title" aria-label="deliver" />
+        | Collector Center!
