lot of fails, included the optimizer for requirejs, boundling, nothing new :(, lot of shit happens

--- a/assets/styles/components/landing.less
+++ b/assets/styles/components/landing.less
@@ -143,6 +143,7 @@
     border-radius: 10px 10px 0 0;
     border-bottom: 0;
     box-shadow: 0 5px 3px rgba(0,0,0,0.5);
+    box-sizing: border-box;
 
     .breakpoint(mobile, {
       width: ~"calc(100% + 20px)";
