--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -79,6 +79,6 @@
 
     <script src="http://maps.google.com/maps/api/js"></script>
     <script src="js/vendor/markerclusterer.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.js" data-main="js/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.js" data-main="js/main2.js"></script>
   </body>
 </html>
